[package]
name = "mp-psi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bfv = {git = "https://github.com/Janmajayamall/bfv.git", features=["serialize", "std"], branch = "wasm"}
traits =  {git = "https://github.com/Janmajayamall/bfv.git", branch = "wasm"}
rand = "0.8.5"
itertools = "0.10.5"
wasm-bindgen = "0.2"
serde = "1.0.195"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
